# SN1V3-imx6ull

./: .gitignore  A53build.sh  A7build.sh  CMakeLists.txt  Makefile.param  PES.sn  README.md  SCG.txt  aim.cpp  arm9build.sh  build.sh  camera.c  compiler.a53.cmake  compiler.a7.cmake  compiler.arm9.cmake  compiler.cmake  cp.sh  gdbinit.sh  makefile  video.c  video.cpp
CRE/: CMakeLists.txt  CRE.c
JDsvc/: CMakeLists.txt  JD_TransMit_img.cpp  JD_file_cre.cpp  JD_file_service.cpp  JD_file_version.cpp  JDcomhead.h  JDrec.cpp  autorecoder.cpp  clockd_def.h  jdsvc_time.cpp  led_ctrl.cpp  led_ctrl.h  master_frame.cpp  mastersvc.cpp  mdc.cpp  mdc_ctrl.h  mdc_txt.cpp  svc.h  timer_reflush.cpp  uart.cpp
JDsvc/mastersvc/: CMakeLists.txt  jdsvc_clean_alarm.cpp  jdsvc_correct.cpp  jdsvc_manual.cpp  jdsvc_par_get.cpp  jdsvc_par_set.cpp  jdsvc_stop.cpp  jdsvc_table.cpp  jdsvc_time.cpp
capmain/: CMakeLists.txt  aim.cpp  processtest.cpp  tableWork.cpp  threadtest.cpp  tmp_ctrl_method.cpp
capmain/imageProcess/: CMakeLists.txt  IMAGEDATA.cpp  binaryzation.cpp  imageOperator.cpp  jpegProcess.cpp  process.cpp
capmain/imageProcess/jpeg/: libjpeg.la  libjpeg.so.8  libjpeg.so.9.3.0
capmain/imageProcess/jpeg/jpgInc/: jmorecfg.h  jpeglib.h
capmain/sensor/: CMakeLists.txt  cap.cpp  video.cpp  video.h
com_inc/: JDcomhead.h  SN1V2_com.h  SN1V2_error.h  SN1V2_rtConfig.h  SunPosTable.h  camera.h  configOperator.h  sn1v3cfg.h  svc.h  tableWork.h  timSet.h  timeTableV2.h  time_interval.h
comlib/: CMakeLists.txt  JDcomhead.h  jd_com.cpp  jd_share.cpp  jd_share.h  mem_share.cpp  mem_share.h  versions.cpp  versions.h
comlib/CRE/: CMakeLists.txt  cre.cpp  cre_v0.cpp
comlib/JD/: CMakeLists.txt  JDrec.cpp  uart.cpp
comlib/datapro/: CMakeLists.txt  CRE_SP.cpp  chnIp_change.cpp  datafilter.cpp
comlib/errHandle/: CMakeLists.txt  errHandle.cpp  errHandle.h  watchdog.cpp
comlib/glog/: libglog.so.0.4.0
comlib/imageProcess/: CMakeLists.txt  binaryzation.cpp
comlib/sunpos/: CMakeLists.txt  ConAlg.cpp  SunPos.cpp  getIdealSunPoint.cpp  suntable.cpp
comlib/text/: CMakeLists.txt  TableScanf.cpp  dateDeafult.cpp  fileOperator.cpp  scanfText.cpp
comlib/timework/: CMakeLists.txt  SN1SG.cpp  SN1SG_2.cpp  timRegType_1.cpp  timeOperator.cpp  timeTable.cpp  timeTableV2.cpp
config_file/: CMakeLists.txt  T1.txt  T2.txt  T4.txt  T6.txt
daemon/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  daemon.cpp
datapro/: CMakeLists.txt  CRE_SP.cpp  chnIp_change.cpp  datafilter.cpp  datafilter_v1.cpp
errHandle/: CMakeLists.txt  errHandle.cpp  errHandle.h  watchdog.h
glog/: libglog.so.0.0.0
imageProcess/: CMakeLists.txt  IMAGEDATA.cpp  jpegProcess.cpp  process.cpp  rgbxx_yuvxx.c
sensor/: CMakeLists.txt  cap.cpp  video.cpp  video.h
tableTestFile/: CMakeLists.txt  b1.txt  b2.txt  b3.txt
text/: CMakeLists.txt  fileOperator.cpp  imageOperator.cpp  scanfText.cpp
timework/: CMakeLists.txt  SN1SG.cpp  SN1SG_2.cpp  tableWork.cpp  timSet.c  timeTable.cpp
update/: cp.sh  main.cpp  main.h  makefile  user.sh
wifiSVC/: CMakeLists.txt  wifi_ctrl.h  wifi_frame.cpp  wifi_module_ctrl.cpp  wifi_rec.cpp  wifi_snd.cpp  wifi_snd.h  wifi_svc.h  wifi_svc_init.cpp  wifi_tim.cpp  wifictrl.cpp
wifiSVC/svc/: CMakeLists.txt  svc_clean_file.cpp  svc_down_load_cfg_table.cpp  svc_down_load_update_file.cpp  svc_download_file.h  svc_once_read.h  svc_once_write.h  svc_query_single.cpp  svc_sn2.cpp  svc_test.cpp  svc_upload_file.cpp  svc_upload_file.h  svc_upload_log.cpp  svc_upload_t7.cpp  svc_upload_t8.cpp  svc_write_cfg_single.cpp
workscript/: CMakeLists.txt  SCG.txt  SCG_logcap.txt  SCG_shanghai.txt  SCG_yumen.txt  clean.sh  cp.sh  io.sh  ir.sh  led.sh  longcap.sh  net.sh  rsnfs.sh  sn3.sh  start.sh  start_up.sh  test.sh
