

INSTALL(DIRECTORY ./ DESTINATION bin
        FILES_MATCHING PATTERN "io.sh"
		PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
        GROUP_EXECUTE GROUP_READ GROUP_WRITE
		)


INSTALL(DIRECTORY ./ DESTINATION bin
        FILES_MATCHING PATTERN "cp.sh"
		PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
        GROUP_EXECUTE GROUP_READ GROUP_WRITE
		)

